# hundun

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: flake8.yaml  packaging.yaml
hundun/: __init__.py  __version__.py
hundun/equations/: __init__.py  henon.py  logistic.py  lorenz.py
hundun/exploration/: __init__.py  _afn.py  _autocorrelation.py  _box3.py  _fnn.py  _gp.py  _mutualinfo.py  _recurrenceplot.py  _ts.py  _utils.py  _wayland.py
hundun/lyapunov/: __init__.py  _func.py  _les_difference.py  _les_differential.py
hundun/systems/: __init__.py  _difference.py  _differential.py  _solver.py  _sync.py  _systems.py  _tu.py
hundun/utils/: __init__.py  _draw.py
sample/: 01_solver.ipynb  02_equations.ipynb  03_les.ipynb  04_rp.ipynb  05_gp.ipynb  06_neighbors.ipynb  07_wayland.ipynb
sample/data/: henon_xy.npy  lorenz_x.npy  shizuoka.npy
